performance tweaks (workaround for `instanceof` slowdowns, see https://bugs.openjdk.org/browse/JDK-8180450)